added auto install into Chrome

--- a/BeardedSpice/BrowserExtensionsController/GetExtensions.xib
+++ b/BeardedSpice/BrowserExtensionsController/GetExtensions.xib
@@ -77,7 +77,7 @@
                     <textField horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="RUy-FD-5ce">
                         <rect key="frame" x="184" y="141" width="308" height="70"/>
                         <textFieldCell key="cell" controlSize="small" alignment="left" id="4et-NY-iVu">
-                            <font key="font" metaFont="message" size="11"/>
+                            <font key="font" metaFont="menu" size="11"/>
                             <string key="title">The extension for Chrome-like browsers should install automatically. But if this did not happen or you removed it from the browser, then try to install the extension manually. The button below to go to the extension page in the google web store. </string>
                             <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -86,7 +86,7 @@
                     <textField horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="l9e-Aj-cAK">
                         <rect key="frame" x="184" y="339" width="308" height="56"/>
                         <textFieldCell key="cell" controlSize="small" id="Zjr-W3-gYt">
-                            <font key="font" metaFont="message" size="11"/>
+                            <font key="font" metaFont="menu" size="11"/>
                             <string key="title">The Safari extension is delivered and installed in place with the app. But you must manually enable the extension in your browser settings. The button below opens those settings.</string>
                             <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -97,7 +97,7 @@
                         <constraints>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="6La-9A-sEX"/>
                         </constraints>
-                        <buttonCell key="cell" type="push" title="Cancel" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="81J-8W-khs">
+                        <buttonCell key="cell" type="push" title="Close" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="81J-8W-khs">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
                             <string key="keyEquivalent" base64-UTF8="YES">
